force-app/main/default/objects/Training_Session__c/fields/Date_Debut__c.field-meta.xml
<CustomField>
    <fullName>Date_Debut__c</fullName>
    <label>DateDebut</label>
    <type>Date</type>
</CustomField>