force-app/main/default/objects/Training_Session__c/fields/Date_Fin__c.field-meta.xml
<CustomField>
    <fullName>Date_Fin__c</fullName>
    <label>DateFin</label>
    <type>Date</type>
</CustomField>