force-app/main/default/objects/Training_Session__c/fields/Formation__c.field-meta.xml
<CustomField>
    <fullName>Formation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formation</label>
    <referenceTo>Training_c__c</referenceTo>
    <relationshipLabel>Sessions de formation</relationshipLabel>
    <relationshipName>Sessions_de_formation</relationshipName>
    <type>Lookup</type>
</CustomField>