force-app/main/default/objects/Training_Session__c/fields/NombresPlace__c.field-meta.xml
<CustomField>
    <fullName>NombresPlace__c</fullName>
    <label>NombresPlace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>